--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.19.1",
     "axios": "^1.7.2",
     "braintree-web-drop-in-react": "^1.2.1",
+    "bucketlist-store-mern": "file:..",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
