--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js",
-    "client": "npm start --prefix ./client",
-    "dev": "concurrently \"npm run start\" \"npm run client\""
+    "dev": "NODE_ENV=development nodemon backend/server.js",
+		"start": "NODE_ENV=production node server.js",
+		"build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "Mahaprabhu",
